--- a/components/event/index.css
+++ b/components/event/index.css
@@ -70,6 +70,7 @@
   font-style: normal;
 }
 
+
 .Event-meta {
   margin-bottom: 0.375rem;
 }
@@ -83,19 +84,19 @@
   vertical-align: middle;
   width: 15px;
   height: 15px;
+  margin-right: 5px;
 }
 
 .Event-title {
   font-size: 1.5rem;
-  line-height: 1.15;
+  line-height: 1;
   font-family: var(--heading-font-family);
   max-width: 22rem;
-  letter-spacing: -0.01em;
 }
 
 @media (min-width: 600px) {
   .Event-title {
-
+    font-size: 2.625rem;
   }
 }
 
