--- a/components/event/index.css
+++ b/components/event/index.css
@@ -77,6 +77,7 @@
 
 .Event-meta {
   margin-bottom: 0.375rem;
+  font-weight: 600;
 }
 
 .Event-footer {
@@ -95,6 +96,7 @@
   font-size: 1.5rem;
   line-height: 1;
   font-family: var(--heading-font-family);
+  font-weight: 600;
   max-width: 22rem;
 }
 
