--- a/components/event/index.css
+++ b/components/event/index.css
@@ -30,7 +30,13 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 0 0 1.5rem 1.5rem;
+  padding: 1.1rem;
+}
+
+@media (min-width: 800px) {
+  .Event-content {
+    padding: 1.5rem;
+  }
 }
 
 .Event--image .Event-content {
@@ -93,14 +99,14 @@
 }
 
 .Event-title {
-  font-size: 1.5rem;
+  font-size: 1.75rem;
   line-height: 1;
   font-family: var(--heading-font-family);
   font-weight: 600;
   max-width: 22rem;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 1000px) {
   .Event-title {
     font-size: 2.625rem;
   }
