--- a/components/event/index.css
+++ b/components/event/index.css
@@ -10,8 +10,8 @@
   height: 100%;
   position: relative;
   z-index: 0;
-  color: rgb(var(--current-color));
-  background: #eee;
+  background: rgb(var(--color-royal));
+  color: #fff;
 }
 
 .Event--image {
@@ -43,7 +43,6 @@
   position: absolute;
   left: 0;
   bottom: 0;
-  color: #fff;
   flex: 1 0 auto;
 }
 
@@ -123,7 +122,7 @@
 .Event-action {
   display: inline-block;
   margin: 0.5rem 0 0;
-  border-bottom: 2px solid orange;
+  border-bottom: 2px solid rgb(var(--color-orange));
 }
 
 /**
