--- a/components/hero/index.css
+++ b/components/hero/index.css
@@ -1,6 +1,6 @@
 .Hero {
   position: relative;
-  background: #000;
+  background: var(--color-royal);
   color: #fff;
   overflow: hidden;
   width: 100%;
@@ -34,7 +34,7 @@
   position: relative;
   display: block;
   height: 1.2em;
-  color: orange;
+  color: rgb(var(--color-orange));
 }
 
 @media (min-width: 500px) {
