--- a/components/hero/index.css
+++ b/components/hero/index.css
@@ -9,7 +9,13 @@
 .Hero-content {
   position: relative;
   z-index: 1;
-  padding: 20vh 0;
+  padding: 8rem 0;
+}
+
+@media (min-height: 400px) {
+  .Hero-content {
+    padding: 20vh 0;
+  }
 }
 
 .Hero-title {
