--- a/components/base/utilities/text.css
+++ b/components/base/utilities/text.css
@@ -30,6 +30,10 @@
   user-select: none !important;
 }
 
+.u-textUppercase {
+  text-transform: uppercase !important;
+}
+
 /**
  * Prevent text from wrapping onto multiple lines and truncate with an ellipsis.
  * 1. Ensure that the node has a maximum width after which truncation can occur.
