--- a/components/card/index.css
+++ b/components/card/index.css
@@ -1,7 +1,6 @@
 @import "../base";
 
 /* @define Card */
-
 .Card {
   display: flex;
   flex-direction: column;
@@ -18,6 +17,10 @@
   }
 }
 
+.Card--background {
+  color: rgb(255, 255, 255);
+}
+
 .Card-content {
   display: flex;
   flex-direction: column;
@@ -26,9 +29,21 @@
   padding: 0;
 }
 
-@media (min-width: 400px) {
-  .Card-content {
-    padding: 0;
+.Card--background .Card-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  width: 100%;
+  height: 100%;
+  padding: 1.1rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+@media (min-width: 800px) {
+  .Card--background .Card-content {
+    padding: 1.5rem;
   }
 }
 
@@ -40,6 +55,10 @@
   flex-grow: 1;
   position: relative; /* 1 */
   width: 100%;
+}
+
+.Card--background .Card-body {
+  flex-grow: 0;
 }
 
 .Card--image .Card-body {
@@ -68,8 +87,12 @@
   font-style: normal;
 }
 
-.Card-meta {
+.Card-meta:not(:last-child) {
   margin-bottom: 0.375rem;
+}
+
+.Card-meta:not(:first-child) {
+  margin-top: 0.375rem;
 }
 
 .Card-footer {
@@ -89,6 +112,16 @@
   line-height: 1.1;
   font-family: var(--heading-font-family);
   max-width: 22rem;
+}
+
+.Card--background .Card-title {
+  font-size: 1.75rem;
+}
+
+@media (min-width: 1000px) {
+  .Card--background .Card-title {
+    font-size: 2.625rem;
+  }
 }
 
 .Card-type {
@@ -128,6 +161,20 @@
   padding-top: calc(100% * 9/14);
 }
 
+.Card--background .Card-figure::before {
+  content: none;
+}
+
+.Card--background .Card-figure::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: radial-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.5) 90%)
+}
+
 .Card-figureIcon {
   position: absolute;
   top: 0;
@@ -144,7 +191,6 @@
     height: 67px;
   }
 }
-
 
 .Card-image {
   position: absolute;
@@ -166,6 +212,17 @@
     top: 0;
     transform: none;
   }
+}
+
+.Card--background .Card-image {
+  position: static;
+  transform-origin: center;
+  transition: transform 600ms cubic-bezier(0.15, 0.03, 0.2, 0.955);
+  will-change: transform;
+}
+
+.Card--background:hover .Card-image {
+  transform: scale(1.05);
 }
 
 /**
