--- a/components/text/index.css
+++ b/components/text/index.css
@@ -229,6 +229,12 @@
 }
 
 .Text h4,
+.Text .Text-h4 {
+  font-size: 1.25em;
+  line-height: 1.15;
+  font-weight: 600;
+}
+
 .Text h5,
 .Text h6,
 .Text .Text-h5,
