--- a/components/footer/index.css
+++ b/components/footer/index.css
@@ -2,5 +2,203 @@
 
 /* @define Footer */
 .Footer {
-  
+  background: rgb(var(--color-fog));
+  padding: 3rem 0 3.5rem;
+}
+
+.Footer-menu {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -0.4rem;
+}
+
+.Footer-list {
+  margin: 0.8rem 0;
+}
+
+.Footer-section {
+  flex-basis: 50%;
+  margin-bottom: 1rem;
+}
+
+.Footer-item {
+  margin: 0.4rem;
+}
+
+.Footer-section--inline {
+  flex-basis: 100%;
+  margin: 0;
+}
+
+.Footer-section--inline .Footer-list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.Footer-link {
+  margin: -0.2rem;
+  padding: 0.2rem;
+}
+
+.Footer-link--primary {
+  font-weight: 600;
+}
+
+/**
+ * Social section
+ */
+
+.Footer-section--social {
+  padding: 0 0 1.6rem;
+  border-bottom: 1px solid rgba(var(--color-lavender), 0.2);
+  margin-bottom: 2.7rem;
+}
+
+.Footer-title {
+  text-align: center;
+  font-weight: 600;
+  font-size: 1.25rem;
+}
+
+.Footer-section--social .Footer-icon {
+  display: block;
+  width: 2.7rem;
+  height: 2.7rem;
+  border-radius: 50%;
+  background: currentColor;
+  position: relative;
+}
+
+@media (min-width: 350px) {
+  .Footer-section--social .Footer-icon {
+    width: 3rem;
+    height: 3rem;
+  }
+}
+
+.Footer-network {
+  position: absolute;
+  width: 50%;
+  height: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: rgb(255, 255, 255);
+}
+
+.Footer-network--smaller {
+  width: 45%;
+  height: 45%;
+}
+
+.Footer-network--pushed {
+  margin-left: 0.05rem;
+}
+
+@media (min-width: 600px) {
+  .Footer-section {
+    flex-basis: 33.33333%;
+  }
+
+  .Footer-section--inline {
+    flex-basis: 100%;
+  }
+
+  .Footer-section--social {
+    margin-bottom: 3.5rem;
+    padding: 0 0 2.3rem;
+  }
+
+  .Footer-title {
+    font-size: 1.5rem;
+  }
+
+  .Footer-section--social .Footer-item {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+}
+
+@media (min-width: 800px) {
+  .Footer-section {
+    flex-basis: 25%;
+  }
+
+  .Footer-section--inline {
+    flex-basis: 100%;
+  }
+}
+
+@media (min-width: 1000px) {
+  .Footer-section {
+    flex-basis: 16.66666%;
+  }
+
+  .Footer-section--inline {
+    flex-basis: 100%;
+  }
+}
+
+/**
+ * Meta section
+ */
+
+.Footer-meta {
+  padding-top: 1.2rem;
+  border-top: 1px solid rgba(var(--color-lavender), 0.2);
+  margin: 1rem 0;
+  text-align: center;
+}
+
+.Footer-home {
+  display: inline-block;
+  width: 6.8rem;
+  margin-top: 2rem;
+}
+
+.Footer-copy {
+  display: block;
+  margin-top: 0.8rem;
+  white-space: nowrap;
+}
+
+@media (min-width: 600px) {
+  .Footer-meta {
+    margin: 3rem 0 1rem;
+  }
+}
+
+@media (min-width: 1000px) {
+  .Footer {
+    padding-bottom: 1.8rem;
+  }
+
+  .Footer-meta {
+    display: flex;
+    flex-wrap: nowrap;
+    padding-top: 3rem;
+  }
+
+  .Footer-meta .Footer-logo {
+    position: relative;
+    top: -0.3rem;
+    order: 1;
+  }
+
+  .Footer-meta .Footer-section {
+    order: 2;
+  }
+
+  .Footer-meta .Footer-copy {
+    order: 3;
+  }
+
+  .Footer-meta .Footer-list,
+  .Footer-meta .Footer-copy,
+  .Footer-meta .Footer-item,
+  .Footer-meta .Footer-home {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 }
