--- a/components/text/index.css
+++ b/components/text/index.css
@@ -98,7 +98,6 @@
   font-size: 1.5rem;
   line-height: 1.2;
   font-weight: normal;
-  font-family: var(--heading-font-family);
   text-align: center;
 }
 
@@ -199,8 +198,7 @@
 .Text .Text-h3 {
   margin-bottom: 0.3em;
   font-weight: normal;
-  font-family: var(--heading-font-family);
-  line-height: var(--heading-line-height);
+  line-height: 1.1;
 }
 
 .Text h1,
