--- a/components/footer/index.css
+++ b/components/footer/index.css
@@ -4,6 +4,7 @@
 .Footer {
   background: rgb(var(--color-fog));
   padding: 3rem 0 3.5rem;
+  user-select: none;
 }
 
 .Footer-menu {
@@ -30,6 +31,11 @@
   margin: 0;
 }
 
+.Footer-section--inline .Footer-item {
+  margin-left: 0.6rem;
+  margin-right: 0.6rem;
+}
+
 .Footer-section--inline .Footer-list {
   display: flex;
   justify-content: center;
@@ -37,8 +43,17 @@
 }
 
 .Footer-link {
-  margin: -0.2rem;
-  padding: 0.2rem;
+  display: inline-block;
+  padding: 0.2rem 0.3rem;
+  margin: -0.2rem -0.3rem;
+  border-radius: 2px;
+  transition: background 400ms var(--ease-out);
+}
+
+.Footer-link:hover,
+.Footer-link:active {
+  background: rgba(var(--color-lavender), 0.1);
+  transition: none;
 }
 
 .Footer-link--primary {
@@ -66,8 +81,21 @@
   width: 2.7rem;
   height: 2.7rem;
   border-radius: 50%;
-  background: currentColor;
+  background: rgba(var(--color-royal), 1);
   position: relative;
+  transform-origin: center;
+  transition: 90ms var(--ease-out);
+  transition-property: transform, background;
+}
+
+.Footer-section--social .Footer-icon:hover,
+.Footer-section--social .Footer-icon:active {
+  transform: scale(1.12);
+  background: rgba(var(--color-royal), 0.9);
+}
+
+.Footer-section--social .Footer-icon:active {
+  transition: none;
 }
 
 @media (min-width: 350px) {
@@ -85,6 +113,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   color: rgb(255, 255, 255);
+  will-change: transform;
 }
 
 .Footer-network--smaller {
@@ -93,7 +122,7 @@
 }
 
 .Footer-network--pushed {
-  margin-left: 0.05rem;
+  margin-left: 3%;
 }
 
 @media (min-width: 600px) {
@@ -155,6 +184,14 @@
   display: inline-block;
   width: 6.8rem;
   margin-top: 2rem;
+  transform-origin: center;
+  transition: 90ms var(--ease-out);
+  transition-property: transform, color;
+}
+
+.Footer-home:hover {
+  transform: scale(1.05);
+  color: rgba(var(--color-royal), 0.9);
 }
 
 .Footer-copy {
