Fix semantics in footer

--- a/components/text/index.css
+++ b/components/text/index.css
@@ -82,10 +82,11 @@
 }
 
 .Text pre {
-  font-size: 0.75rem;
+  font-size: 0.8rem;
   overflow: auto;
-  background: rgba(0, 0, 0, 0.1);
-  padding: 1em;
+  background: rgb(var(--color-royal));
+  color: rgb(255, 255, 255);
+  padding: 1rem;
   text-align: left;
 }
 
@@ -163,7 +164,7 @@
   position: absolute;
   left: 0;
   font-weight: 600;
-  color: var(--color-theme)
+  color: var(--color-theme);
 }
 
 .Text li + li {
@@ -209,7 +210,7 @@
 
 @media (min-width: 500px) {
   .Text h1,
-  .Text .Text-h1  {
+  .Text .Text-h1 {
     font-size: 4rem;
   }
 }
