--- a/components/base/utilities/transitions.css
+++ b/components/base/utilities/transitions.css
@@ -1,14 +1,14 @@
 /* @define utilities */
 
-.u-slideUp {
+.u-slideDown {
   opacity: 0;
-  animation: slide-up 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
+  animation: slide-down 350ms cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
 }
 
-@keyframes slide-up {
+@keyframes slide-down {
   0% {
     opacity: 0;
-    transform: translateY(50px);
+    transform: translateY(-2rem);
   }
 
   100% {
