--- a/components/quotes/index.css
+++ b/components/quotes/index.css
@@ -1,13 +1,21 @@
 .Quotes {
   position: relative;
-  padding: 3.75rem 0 2.5rem;
+  padding: 3.75rem 0 1.25rem;
 
   --Quotes-dot-size: 8px;
+}
+
+.Quotes--single {
+  padding: 3.75rem 0;
 }
 
 @media (min-width: 800px) {
   .Quotes {
     padding: 5.5rem 0 2.875rem;
+  }
+
+  .Quotes--single {
+    padding: 5.5rem 0;
   }
 }
 
