Hook up blurb and ideas to prismic

--- a/components/card/index.css
+++ b/components/card/index.css
@@ -131,13 +131,6 @@
   margin: 0.5rem 0 0;
 }
 
-.Card-action {
-  display: inline-block;
-  margin: 0.5rem 0 0;
-  border-bottom: 2px solid rgb(var(--color-orange));
-  font-weight: 600;
-}
-
 /**
  * Figure
  */
@@ -227,6 +220,13 @@
 /**
  * Link
  */
+
+ .Card-link {
+  display: inline-block;
+  margin: 0.5rem 0 0;
+  border-bottom: 2px solid rgb(var(--color-orange));
+  font-weight: 600;
+ }
 
 .Card-link::before {
   content: "";
