--- a/components/header/index.css
+++ b/components/header/index.css
@@ -4,6 +4,7 @@
 .Header {
   padding: 0.7rem 0;
   background: rgb(255, 255, 255);
+  box-shadow: 0 1px 0 rgba(var(--color-lavender), 0.2);
 }
 
 .Header-content {
@@ -55,7 +56,7 @@
   width: 48px;
   height: 48px;
   position: relative;
-  right: -13px;
+  right: -8px;
   border-radius: 2px;
 }
 
@@ -117,7 +118,6 @@
 
 .Header.is-open {
   width: 100%;
-  border-bottom: 1px solid rgba(var(--color-lavender), 0.2);
   position: fixed;
   z-index: 1;
   top: 0;
