Add arrows to footer and header

--- a/components/base/utilities/layout.css
+++ b/components/base/utilities/layout.css
@@ -21,6 +21,14 @@
   }
 }
 
+.u-arrow {
+  width: 0.375em;
+  vertical-align: middle;
+  margin: 0 0.3rem;
+  position: relative;
+  top: -0.05em;
+}
+
 /**
  * Display
  */
