Add desktop menu

--- a/components/header/index.css
+++ b/components/header/index.css
@@ -5,17 +5,20 @@
   padding: 0.7rem 0;
   background: rgb(255, 255, 255);
   box-shadow: 0 1px 0 rgba(141, 137, 165, 0.2);
+  user-select: none;
 }
 
 .Header-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 100%;
 }
 
 @media (min-width: 600px) {
   .Header {
-    padding: 1.4rem 0;
+    height: 5rem;
+    padding: 0;
   }
 }
 
@@ -27,6 +30,7 @@
   display: inline-block;
   position: relative;
   top: 0.1rem;
+  white-space: nowrap;
 }
 
 .Header-logo {
@@ -44,6 +48,126 @@
 @media (min-width: 600px) {
   .Header-home {
     font-size: 1.15rem;
+  }
+}
+
+/**
+ * Desktop navigation
+ */
+
+.Header-list {
+  display: none;
+  white-space: nowrap;
+}
+
+@media (min-width: 600px) {
+  .Header-menu {
+    height: 100%;
+  }
+
+  .Header-list {
+    display: flex;
+    height: 100%;
+    margin-right: -1rem;
+  }
+
+  .Header-item {
+    height: 100%;
+    position: relative;
+  }
+
+  .Header-link {
+    display: flex;
+    height: 100%;
+    padding: 0 1rem;
+    align-items: center;
+    font-weight: 600;
+    transition: background 400ms var(--ease-out);
+  }
+
+  .Header-item--dropdown .Header-link {
+    padding-right: 0.7rem;
+  }
+
+  .Header-item--dropdown:hover > .Header-link,
+  .Header-link:hover {
+    background: rgb(var(--color-fog));
+    transition: none;
+  }
+
+  .Header-dropdown {
+    width: 16rem;
+    pointer-events: none;
+    position: absolute;
+    right: -2rem;
+    top: calc(100% - 0.3rem);
+    z-index: 2;
+    font-size: 0.75rem;
+    color: rgb(var(--color-lavender));
+    background: rgb(255, 255, 255);
+    border-radius: 4px;
+    opacity: 0;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.02), 0 30px 100px -20px rgba(50, 50, 93, 0.2), 0 30px 60px -30px rgba(0, 0, 0, 0.2), 0 -18px 30px -10px rgba(0, 0, 0, 0.03);
+    transition: 100ms var(--ease-in);
+    transition-property: transform, opacity;
+    will-change: transform, opacity;
+    transform: translateY(1rem);
+  }
+
+  .Header-dropdown .Header-link {
+    display: block;
+    padding: 0.8rem 1rem;
+    white-space: initial;
+    transition: none;
+  }
+
+  .Header-dropdown .Header-link:hover {
+    background: none;
+  }
+
+  .Header-dropdown .Header-item:first-child .Header-link::before {
+    border-radius: 4px 4px 0 0;
+  }
+
+  .Header-dropdown .Header-item:last-child .Header-link::before {
+    border-radius: 0 0 4px 4px;
+  }
+
+  .Header-dropdown .Header-link > * {
+    position: relative;
+  }
+
+  .Header-dropdown .Header-link::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity 400ms var(--ease-out);
+    background: linear-gradient(to right, rgba(var(--color-fog), 0.4), rgba(var(--color-fog), 0.8) 30%, rgba(var(--color-fog), 1) 70%, rgba(var(--color-fog), 0.4));
+  }
+
+  .Header-dropdown .Header-link:hover::before {
+    opacity: 1;
+    transition: none;
+  }
+
+  .Header-title {
+    display: block;
+    margin-bottom: 0.15rem;
+    font-weight: 600;
+    color: rgb(var(--color-royal));
+    font-size: 0.875rem;
+  }
+
+  .Header-link:hover + .Header-dropdown,
+  .Header-dropdown:hover {
+    opacity: 1;
+    transform: translateY(0);
+    pointer-events: auto;
+    transition: 300ms 70ms var(--ease-out);
   }
 }
 
