--- a/components/principles/index.css
+++ b/components/principles/index.css
@@ -18,7 +18,7 @@
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 1000px) {
   .Principles-item:not(:first-child) {
     margin-top: 4.375rem;
   }
@@ -95,7 +95,7 @@
   line-height: 1.1;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 800px) {
   .Principles-title {
     font-size: 2.625rem;
   }
@@ -120,6 +120,11 @@
 @media (min-width: 600px) {
   .Principles-body {
     margin-top: 1rem;
+  }
+}
+
+@media (min-width: 800px) {
+  .Principles-body {
     font-size: 1.25rem;
   }
 }
