--- a/components/header/index.css
+++ b/components/header/index.css
@@ -15,7 +15,7 @@
   height: 100%;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 800px) {
   .Header {
     height: 5rem;
     padding: 0;
@@ -45,7 +45,7 @@
   position: relative;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 800px) {
   .Header-home {
     font-size: 1.15rem;
   }
@@ -60,7 +60,7 @@
   white-space: nowrap;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 800px) {
   .Header-menu {
     height: 100%;
   }
@@ -188,7 +188,7 @@
   background: rgba(var(--color-lavender), 0.3);
 }
 
-@media (min-width: 600px) {
+@media (min-width: 800px) {
   .Header-toggle {
     display: none;
   }
@@ -222,18 +222,19 @@
 .Header-lines {
   top: 50%;
   margin-top: -1px;
+  transition-property: transform;
   transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-  transition-duration: 220ms;
+  transition-duration: 100ms;
 }
 
 .Header-lines::before {
   top: -8px;
-  transition: top 100ms var(--ease-in) .25s, opacity 100ms var(--ease-in);
+  transition: top 100ms ease 0.12s, opacity 100ms ease;
 }
 
 .Header-lines::after {
   bottom: -8px;
-  transition: bottom 100ms var(--ease-in) 250ms, transform 220ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  transition: bottom 100ms ease 0.12s, transform 100ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
 }
 
 /**
@@ -249,19 +250,19 @@
 }
 
 .Header.is-open .Header-lines {
-  transition-delay: 120ms;
+  transition-delay: 0.12s;
   transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-  transform: rotate(225deg);
+  transform: rotate(45deg);
 }
 
 .Header.is-open .Header-lines::before {
   top: 0;
-  transition: top 100ms var(--ease-out), opacity 100ms var(--ease-out) 120ms;
+  transition: top 100ms ease, opacity 100ms ease 0.12s;
   opacity: 0;
 }
 
 .Header.is-open .Header-lines:after {
   bottom: 0;
-  transition: bottom 100ms var(--ease-out), transform 220ms cubic-bezier(0.215, 0.61, 0.355, 1) 120ms;
+  transition: bottom 100ms ease, transform 100ms cubic-bezier(0.215, 0.61, 0.355, 1) 0.12s;
   transform: rotate(-90deg);
 }
