Add instagram, newsletter, preview

--- a/components/grid/index.css
+++ b/components/grid/index.css
@@ -69,3 +69,36 @@
     transform: translateY(0px);
   }
 }
+
+/**
+ * Carousel
+ */
+
+@media (max-width: 599px) {
+  .Grid--carousel {
+    width: 100%;
+    margin: 0;
+    overflow-x: auto;
+    overflow-y: hidden;
+    flex-wrap: nowrap;
+    -webkit-overflow-scrolling: touch;
+    -webkit-scroll-snap-type: mandatory;
+    scroll-snap-type: x mandatory;
+    -webkit-scroll-snap-points-x: repeat(100%);
+    scroll-snap-points-x: repeat(100%);
+  }
+
+  .Grid--carousel .Grid-cell {
+    flex-basis: calc(100% - 2rem);
+    padding-left: var(--document-margin);
+    padding-right: 0;
+    margin-right: calc((var(--document-margin) * -1) + 1rem);
+    scroll-snap-align: start;
+    margin-bottom: 0;
+  }
+
+  .Grid--carousel .Grid-cell:last-child {
+    padding-right: var(--document-margin);
+    flex-basis: calc(100% - 1rem);
+  }
+}
