add orange background overridden by base styles

--- a/components/button/index.css
+++ b/components/button/index.css
@@ -17,6 +17,10 @@
   transition-property: transform;
 }
 
+.Button:hover {
+  background: rgb(var(--color-orange));
+}
+
 .Button:not([disabled]):hover {
   transform: scale(1.05);
 }
