--- a/components/hero/index.css
+++ b/components/hero/index.css
@@ -1,9 +1,12 @@
 .Hero {
   position: relative;
-  background: rgb(var(--color-royal));
-  color: #fff;
   overflow: hidden;
   width: 100%;
+}
+
+.Hero--image {
+  background: rgb(var(--color-royal));
+  color: #fff;
 }
 
 .Hero--center {
@@ -15,17 +18,26 @@
 }
 
 .Hero-content {
+  padding: 5.125rem 0 2rem;
+}
+
+@media (min-width: 600px) and (min-height: 400px) {
+  .Hero-content {
+    padding: 20vh 0 10vh;
+  }
+}
+
+.Hero--image .Hero-content {
   position: relative;
   z-index: 1;
   padding: 6rem 0;
 }
 
 @media (min-width: 600px) and (min-height: 400px) {
-  .Hero-content {
+  .Hero--image .Hero-content {
     padding: 20vh 0;
   }
 }
-
 
 .Hero-title {
   font-size: 2.25rem;
@@ -92,15 +104,16 @@
 }
 
 .Hero-text {
-  max-width: 600px;
+  max-width: 820px;
   font-size: 1.125rem;
-  line-height: 1.5;
+  line-height: 1.625;
   margin-top: 0.875rem;
 }
 
 @media (min-width: 700px) {
   .Hero-text {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
+    margin-top: 1.5625rem;
   }
 }
 
