--- a/components/base/index.css
+++ b/components/base/index.css
@@ -74,6 +74,14 @@
 }
 
 /**
+ * Text selection
+ */
+
+::selection {
+  background: rgba(var(--color-orange), 0.25);
+}
+
+/**
  * Media elements
  */
 
@@ -170,8 +178,7 @@ hr {
   width: 100%;
   height: 1px;
   border: 0;
-  margin: 3em auto;
-  background-color: #000;
+  background: rgba(var(--color-lavender), 0.3);
 }
 
 /**
