--- a/components/text/index.css
+++ b/components/text/index.css
@@ -7,18 +7,20 @@
   line-height: var(--default-line-height);
   font-size: 1rem;
   text-align: left;
-  max-width: 39em;
+  max-width: var(--container-medium-width);
+  margin-right: auto;
+  margin-left: auto;
 }
 
 @media (min-width: 350px) {
   .Text {
-    font-size: 1.0625rem;
+    font-size: 1.125rem;
   }
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 800px) {
   .Text {
-    font-size: 1.1875rem;
+    font-size: 1.25rem;
   }
 }
 
@@ -26,59 +28,62 @@
  * Inline elements
  */
 
-.Text-muted {
-  color: rgba(var(--color-muted));
-}
-
-.Text-small {
-  font-size: 0.875rem;
-}
-
 .Text small {
   font-size: 0.875rem;
 }
 
 .Text a:not(.Embed-link) {
-  text-decoration: underline;
-  transition: opacity 200ms var(--ease-out), color 200ms var(--ease-out);
-  color: rgb(var(--color-link));
+  border-bottom: 2px solid rgb(var(--color-orange));
+  font-weight: 600;
+  transition: color 100ms var(--ease-out);
+}
+
+.Text a:not(.Embed-link):hover {
+  color: rgb(var(--color-orange));
 }
 
 .Text a:not(.Embed-link):active {
   opacity: 0.5;
-  transition: none;
-}
-
-.Text-muted a,
-.Text-muted a:hover {
-  color: inherit;
-  text-decoration: underline;
-  font-weight: inherit;
 }
 
 /**
  * Block elements
  */
 
-.Text p:not(:first-child),
-.Text ul:not(:first-child),
-.Text ol:not(:first-child),
-.Text img:not(:first-child),
-.Text pre:not(:first-child) {
-  margin-top: 1.5em;
+.Text p,
+.Text ul,
+.Text ol,
+.Text h1,
+.Text h2,
+.Text h3,
+.Text h4 {
+  margin: 0.8em 0;
 }
 
-.Text p:not(:last-child),
-.Text ul:not(:last-child),
-.Text ol:not(:last-child),
-.Text img:not(:last-child),
-.Text pre:not(:last-child) {
-  margin-bottom: 1.5em;
-}
-
-.Text img {
+.Text img:not(.Embed-image),
+.Text-block {
+  display: block;
+  width: 100%;
   height: auto;
-  max-width: var(--wide-max-width);
+  margin: 2.2em 0;
+}
+
+.Text-caption {
+  margin: -1.2em 0 1.6em;
+  font-size: 1rem;
+  text-align: right;
+  color: rgb(var(--color-lavender));
+}
+
+@media (min-width: 800px) {
+  .Text img:not(.Embed-image),
+  .Text-block {
+    margin: 4em 0;
+  }
+
+  .Text-caption {
+    margin-top: -2.5em 0 2.5em;
+  }
 }
 
 .Text pre {
@@ -91,55 +96,13 @@
 }
 
 /**
- * Blockquote
- */
-
-.Text-blockquote {
-  margin: 2rem 0 2.5rem;
-  font-size: 1.5rem;
-  line-height: 1.2;
-  font-weight: normal;
-  text-align: center;
-}
-
-.Text-cite {
-  display: inline-block;
-  font-size: 0.875rem;
-  margin-top: 1.4rem;
-  text-transform: uppercase;
-  font-weight: 600;
-  font-family: var(--document-font-family);
-}
-
-.Text-cite:empty {
-  display: none;
-}
-
-.Text-blockquote p:first-child {
-  margin-top: 0;
-}
-
-.Text-blockquote p:last-child {
-  margin-bottom: 0;
-}
-
-@media (min-width: 600px) {
-  .Text-blockquote {
-    font-size: 1.7rem;
-  }
-}
-
-@media (min-width: 1000px) {
-  .Text-blockquote {
-    font-size: 1.9rem;
-    max-width: 55rem;
-    margin: 3rem auto;
-  }
-}
-
-/**
  * Lists
  */
+
+.Text ul,
+.Text ol {
+  margin: calc(1.2em - 0.5em) 0 1.2em;
+}
 
 .Text ul {
   list-style-type: none;
@@ -147,11 +110,11 @@
 
 .Text ol {
   list-style-type: decimal;
-  padding-left: 1.5em;
+  padding-left: 1.7em;
 }
 
 .Text ul > li {
-  padding-left: 1.5em;
+  padding-left: 1.2em;
   position: relative;
 }
 
@@ -160,15 +123,18 @@
 }
 
 .Text ul > li::before {
-  content: "–";
+  content: "";
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
   position: absolute;
   left: 0;
-  font-weight: 600;
-  color: var(--color-theme);
+  top: calc(0.5em + 0.6em);
+  background: rgb(var(--color-orange));
 }
 
-.Text li + li {
-  padding-top: 0.8em;
+.Text li {
+  padding-top: 0.5em;
 }
 
 /**
@@ -179,84 +145,42 @@
 .Text h2,
 .Text h3,
 .Text h4,
-.Text h5,
-.Text h6,
 .Text .Text-h1,
 .Text .Text-h2,
 .Text .Text-h3,
-.Text .Text-h4,
-.Text .Text-h5,
-.Text .Text-h6 {
-  margin: 1.5em 0 0;
-  color: rgb(var(--current-color));
-}
-
-.Text h1,
-.Text h2,
-.Text h3,
-.Text .Text-h1,
-.Text .Text-h2,
-.Text .Text-h3 {
-  margin-bottom: 0.3em;
-  font-weight: normal;
-  line-height: 1.1;
+.Text .Text-h4 {
+  font-weight: 600;
+  line-height: 1.25;
 }
 
 .Text h1,
 .Text .Text-h1 {
-  font-size: 3rem;
-  line-height: .95;
-}
-
-@media (min-width: 500px) {
-  .Text h1,
-  .Text .Text-h1 {
-    font-size: 4rem;
-  }
+  font-size: 2em;
+  margin-top: 0;
 }
 
 .Text h2,
 .Text .Text-h2 {
-  font-size: 2.1em;
-  line-height: 1.1;
+  font-size: 1.33em;
+  margin-top: 2em;
 }
 
 .Text h3,
-.Text .Text-h3 {
-  font-size: 1.5em;
-  line-height: 1.15;
-}
-
+.Text .Text-h3,
 .Text h4,
 .Text .Text-h4 {
-  font-size: 1.25em;
-  line-height: 1.15;
-  font-weight: 600;
+  font-size: 1.1em;
+  margin-top: 1.4em;
 }
 
-.Text h5,
-.Text h6,
-.Text .Text-h5,
-.Text .Text-h6 {
-  font-size: 0.875rem;
-  text-transform: uppercase;
-  font-weight: 600;
-}
-
-@media (min-width: 1200px) {
+@media (min-width: 800px) {
   .Text h1,
   .Text .Text-h1 {
-    font-size: 4.75rem;
+    font-size: 3.2em;
   }
 
   .Text h2,
   .Text .Text-h2 {
-    font-size: 3.5rem;
-  }
-
-  .Text h3,
-  .Text .Text-h3 {
-    font-size: 1.8em;
-    line-height: 1.1;
+    font-size: 1.6em;
   }
 }
