--- a/components/embed/index.css
+++ b/components/embed/index.css
@@ -6,6 +6,7 @@
   position: relative;
   color: #fff;
   user-select: none;
+  overflow: hidden;
 }
 
 .Embed-link {
@@ -22,55 +23,143 @@
   position: absolute;
   left: 0;
   top: 0;
+  z-index: 1;
+  background: radial-gradient(rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.2) 90%);
 }
 
 .Embed-play {
-  width: 4rem;
-  height: 4rem;
+  width: 4.5rem;
+  height: 4.5rem;
   position: absolute;
   left: 50%;
   top: 50%;
   z-index: 1;
   transform: translate(-50%, -50%);
-  transition: transform 140ms var(--ease);
-  will-change: transform;
-  background-color: rgba(var(--current-color));
-  background-image: url("./icon.svg");
-  background-size: 100% 100%;
-  border-radius: 100%;
-  box-shadow: 0 0 2rem 1px rgba(0, 0, 0, 0.15);
 }
 
-.Embed:hover .Embed-play {
-  transform: translate(-50%, -50%) scale(1.08);
-}
-
+.Embed--fullscreen::after,
 .Embed--hidden::after {
   content: none;
-}
-
-@media (min-width: 600px) {
-  .Embed .Embed-play {
-    width: 4.5rem;
-    height: 4.5rem;
-    transform: translate(-50%, -60%);
-  }
-
-  .Embed:hover .Embed-play {
-    transform: translate(-50%, -60%) scale(1.08);
-  }
 }
 
 .Embed-image {
   display: block;
   width: 100%;
   height: auto;
+  transform-origin: center;
+  transition: transform 600ms cubic-bezier(0.15, 0.03, 0.2, 0.955);
+  will-change: transform;
+}
+
+.Embed-link:hover + .Embed-image {
+  transform: scale(1.05);
 }
 
 @supports (object-fit: cover) {
-  .Embed .Embed-image {
+  .Embed:not(.Embed--sm) .Embed-image {
     min-height: 40vh;
     object-fit: cover;
+  }
+}
+
+/**
+ * Fullscreen mode
+ */
+
+.Embed--fullscreen {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 30;
+  background: rgba(0, 0, 0, 0.85);
+  animation: Embed--appear 500ms cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
+}
+
+@keyframes Embed--appear {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.Embed--fullscreen.is-closing {
+  animation: Embed--disappear 350ms 200ms cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
+}
+
+@keyframes Embed--disappear {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
+.Embed-close {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -2;
+}
+
+.Embed-cross {
+  box-sizing: content-box;
+  width: 1.5rem;
+  height: 1.5rem;
+  padding: 1rem;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  border-radius: 50%;
+  pointer-events: none;
+  background-color: rgba(81, 81, 81, 0);
+  transition: background-color 180ms var(--ease-out);
+}
+
+.Embed-cross::before,
+.Embed-cross::after {
+  content: "";
+  width: 1.5rem;
+  height: 2px;
+  position: absolute;
+  right: 1rem;
+  top: 50%;
+  background: currentColor;
+}
+
+.Embed-cross::before {
+  transform: rotate(45deg);
+}
+
+.Embed-cross::after {
+  transform: rotate(-45deg);
+}
+
+.Embed-close:hover .Embed-cross {
+  background-color: rgba(81, 81, 81, 1);
+}
+
+.Embed-wrapper {
+  height: 0;
+  width: 100%;
+  max-width: var(--container-large-width);
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: -1;
+}
+
+@media (min-width: 800px) {
+  .Embed-wrapper {
+    width: calc(100% - 11rem);
   }
 }
 
@@ -81,11 +170,24 @@
   left: 0;
   top: 0;
   padding-bottom: calc(100% * (9 / 16));
-
   background-color: #000;
   box-shadow: 0 0 10rem rgba(0, 0, 0, 0.2);
   transform: translate(-50%, -50%);
   will-change: transform;
+}
+
+.Embed--fullscreen.is-closing .Embed-iframe {
+  animation: Embed-iframe--disappear 250ms cubic-bezier(0.33, 0.89, 0.62, 1) forwards;
+}
+
+@keyframes Embed-iframe--disappear {
+  from {
+    transform: translate(-50%, -50%);
+  }
+
+  to {
+    transform: translate(-50%, 50vh);
+  }
 }
 
 .Embed-iframe iframe {
@@ -94,4 +196,15 @@
   position: absolute;
   left: 0;
   top: 0;
+}
+
+.Embed--fullscreen .Embed-iframe iframe {
+  visibility: hidden;
+  animation: Embed-content--appear 0ms 650ms linear forwards;
+}
+
+@keyframes Embed-content--appear {
+  to {
+    visibility: visible;
+  }
 }
