--- a/components/base/utilities/space.css
+++ b/components/base/utilities/space.css
@@ -6,15 +6,27 @@
  * Dynamic
  */
 
-.u-space {
-  margin-top: 2.6em;
-  margin-bottom: 2.6em;
+.u-space1 {
+  margin-top: 2.6rem !important;
+  margin-bottom: 2.6rem !important;
 }
 
-@media (min-width: 800px) {
-  .u-space {
-    margin-top: 4em;
-    margin-bottom: 4em;
+@media (min-width: 800px) and (min-height: 400px) {
+  .u-space1 {
+    margin-top: 4rem !important;
+    margin-bottom: 4rem !important;
+  }
+}
+
+.u-space2 {
+  margin-top: 3rem !important;
+  margin-bottom: 3rem !important;
+}
+
+@media (min-width: 800px) and (min-height: 400px) {
+  .u-space2 {
+    margin-top: 6rem !important;
+    margin-bottom: 6rem !important;
   }
 }
 
