--- a/components/hero/index.css
+++ b/components/hero/index.css
@@ -1,68 +1,132 @@
 .Hero {
   position: relative;
-  overflow: hidden;
   width: 100%;
   --Hero-rotatingDelay: 500ms;
 }
 
-.Hero--image {
-  background: rgb(var(--color-royal));
-  color: #fff;
-}
-
-.Hero--center {
-  text-align: center;
-}
-
 .Hero.is-loading {
-  background-color: rgba(var(--loading-color));
+  background-color: rgb(var(--loading-color));
 }
 
 .Hero-content {
-  padding: 5.125rem 0 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 5rem 0 4rem;
 }
 
 @media (min-width: 600px) and (min-height: 400px) {
   .Hero-content {
-    padding: 10rem 0 5rem;
-  }
-}
-
-.Hero--image .Hero-content {
-  position: relative;
-  z-index: 1;
-  padding: 6rem 0;
-}
-
-@media (min-width: 600px) and (min-height: 400px) {
-  .Hero--image .Hero-content {
-    padding: 10rem 0;
+    margin: 9rem 0 6rem;
   }
 }
 
 .Hero-title {
   font-size: 2.25rem;
-  line-height: 1.4;
-  max-width: 800px;
+  line-height: 1.1;
+  max-width: 50rem;
   font-weight: 600;
-  font-family: var(--heading-font-family);
 }
 
-.Hero--center .Hero-title {
-  margin: 0 auto;
-}
-
-@media (min-width: 700px) {
-  .Hero-title {
-    font-size: 3rem;
-  }
-}
-
-@media (min-height: 500px) and (min-width: 1000px) {
+@media (min-width: 800px) and (min-height: 400px) {
   .Hero-title {
     font-size: 4rem;
   }
 }
+
+.Hero-text {
+  max-width: 32em;
+  font-size: 1.125rem;
+  margin-top: 0.875rem;
+}
+
+@media (min-width: 800px) and (min-height: 400px) {
+  .Hero-text {
+    font-size: 1.5rem;
+    margin-top: 0.8em;
+  }
+}
+
+/**
+ * Action
+ */
+
+.Hero-action {
+  margin-top: 1.6875rem;
+}
+
+/**
+ * Centered text
+ */
+
+.Hero--center {
+  text-align: center;
+}
+
+.Hero--center .Hero-title {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.Hero--center .Hero-text {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/**
+ * With image
+ */
+
+.Hero--image {
+  background: rgb(var(--color-royal));
+  color: rgb(255, 255, 255);
+  margin-bottom: 3.4rem;
+}
+
+.Hero-image {
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 50% 50%;
+  display: block;
+}
+
+.Hero--image .Hero-content {
+  position: relative;
+  z-index: 1;
+  padding: 6.25rem 0;
+  margin: 0;
+}
+
+@media (min-width: 800px) and (min-height: 400px) {
+  .Hero--image {
+    margin-bottom: 5rem;
+  }
+
+  .Hero--image .Hero-content {
+    min-height: 35rem;
+  }
+}
+
+@media (min-width: 1000px) and (min-height: 400px) {
+  .Hero--image {
+    margin-bottom: 7rem;
+  }
+
+  .Hero--image .Hero-content {
+    min-height: 70vh;
+  }
+}
+
+/**
+ * Rotating text
+ */
 
 .Hero-rotateWrap {
   position: relative;
@@ -102,40 +166,4 @@
 :root[scripting-enabled] .Hero-rotateText.in {
   transform: translateY(0px);
   opacity: 1;
-}
-
-.Hero-text {
-  max-width: 820px;
-  font-size: 1.125rem;
-  line-height: 1.625;
-  margin-top: 0.875rem;
-}
-
-@media (min-width: 700px) {
-  .Hero-text {
-    font-size: 1.5rem;
-    margin-top: 1.5625rem;
-  }
-}
-
-.Hero--center .Hero-text {
-  margin: 0 auto;
-}
-
-.Hero-action {
-  margin-top: 1.6875rem;
-}
-
-.Hero-image {
-  position: absolute;
-  z-index: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: 50% 50%;
-  display: block;
 }
