--- a/components/text/index.css
+++ b/components/text/index.css
@@ -18,7 +18,7 @@
   }
 }
 
-@media (min-width: 800px) {
+@media (min-width: 800px) and (min-height: 400px) {
   .Text {
     font-size: 1.25rem;
   }
@@ -60,8 +60,7 @@
   margin: 0.8em 0;
 }
 
-.Text img:not(.Embed-image),
-.Text-block {
+.Text img:not(.Embed-image) {
   display: block;
   width: 100%;
   height: auto;
@@ -75,14 +74,17 @@
   color: rgb(var(--color-lavender));
 }
 
-@media (min-width: 800px) {
-  .Text img:not(.Embed-image),
-  .Text-block {
+.Text-caption:empty {
+  display: none;
+}
+
+@media (min-width: 800px) and (min-height: 400px) {
+  .Text img:not(.Embed-image) {
     margin: 4em 0;
   }
 
   .Text-caption {
-    margin-top: -2.5em 0 2.5em;
+    margin: -2.5em 0 2.5em;
   }
 }
 
@@ -156,7 +158,7 @@
 .Text h1,
 .Text .Text-h1 {
   font-size: 2em;
-  margin-top: 0;
+  margin: 0;
 }
 
 .Text h2,
@@ -173,7 +175,7 @@
   margin-top: 1.4em;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 800px) and (min-height: 400px) {
   .Text h1,
   .Text .Text-h1 {
     font-size: 3.2em;
