--- a/components/button/index.css
+++ b/components/button/index.css
@@ -3,8 +3,9 @@
 /* @define Button */
 .Button {
   display: inline-block;
-  padding: 0 1.2rem;
-  line-height: 3.25rem;
+  min-width: 9.2rem;
+  padding: 0 1.8rem;
+  line-height: 3.15rem;
   font-size: 1rem;
   color: rgb(255, 255, 255);
   background: rgb(var(--color-orange));
