--- a/components/embed/index.css
+++ b/components/embed/index.css
@@ -62,6 +62,24 @@
   }
 }
 
+.Embed-title {
+  position: absolute;
+  top: calc(50% + 3rem);
+  z-index: 1;
+  font-weight: 600;
+  text-align: center;
+  width: 100%;
+  padding: 1.4rem;
+  font-size: 1.25rem;
+  pointer-events: none;
+}
+
+@media (min-width: 800px) {
+  .Embed-title {
+    font-size: 2.5rem;
+  }
+}
+
 /**
  * Fullscreen mode
  */
