--- a/components/compass/index.css
+++ b/components/compass/index.css
@@ -12,7 +12,7 @@
 
 @media (min-width: 600px) {
   .Compass--image .Compass-wrap {
-    grid-gap: 4rem;
+    grid-gap: 3rem;
     grid-template-columns: 200px 1fr;
   }
 }
@@ -68,7 +68,7 @@
 
 
 .Compass--image .Compass-content {
-  max-width: 750px;
+  max-width: 34rem;
 }
 
 @media (min-width: 600px) {
@@ -77,13 +77,18 @@
   }
 }
 
+@media (min-width: 600px) {
+  .Compass--image .Compass-content {
+    max-width: 50rem;
+  }
+}
 
 .Compass-title {
   font-size: 28px;
   font-weight: 600;
   line-height: 1.2;
   margin-bottom: 3rem;
-  max-width: 900px;
+  max-width: 18em;
 }
 
 @media (min-width: 600px) {
