--- a/components/grid/index.css
+++ b/components/grid/index.css
@@ -35,8 +35,16 @@
   margin-bottom: calc(var(--Grid-gutter-vertical) * -1);
 }
 
-.Grid + .Grid {
-  margin-top: var(--Grid-gutter-vertical);
+.Grid--slim {
+  --Grid-gutter: 0.6rem;
+  --Grid-gutter-vertical: 0.6rem;
+}
+
+@media (min-width: 600px), print {
+  .Grid--slim {
+    --Grid-gutter: 1.5rem;
+    --Grid-gutter-vertical: 1.5rem;
+  }
 }
 
 /**
