--- a/components/glocal/index.css
+++ b/components/glocal/index.css
@@ -8,42 +8,51 @@
   justify-content: flex-start;
 }
 
-@media (min-width: 900px) {
-  .Glocal {
-    flex-wrap: nowrap;
-  }
-}
-
 .Glocal-figure {
-  flex: 1 1 100%;
-  margin-bottom: 2rem;
-  white-space: nowrap;
-  text-align: right;
-  font-size: 4.8rem;
-  font-weight: 600;
-  font-family: var(--heading-font-family);
-  line-height: var(--heading-line-height);
-}
-
-@media (min-width: 900px) {
-  .Glocal-figure {
-    flex: 0 1 24rem;
-    margin-bottom: 0;
-    margin-right: 9rem;
-  }
+  flex: 0 1 50%;
+  margin: 0 auto 1rem;
+  max-width: 18rem;
 }
 
 .Glocal-tinted {
   color: rgb(var(--color-orange));
 }
 
-.Glocal-symbol {
-  display: inline-block;
-  margin-left: 0.3em;
-  vertical-align: baseline;
-}
-
 .Glocal-body {
   flex: 0 1 auto;
   max-width: 37.5rem;
+}
+
+@media (min-width: 500px) {
+  .Glocal-figure {
+    margin-left: 0;
+  }
+}
+
+@media (min-width: 800px) {
+  .Glocal {
+    flex-wrap: nowrap;
+    margin: -2rem auto;
+    max-width: 65rem;
+  }
+
+  .Glocal-figure {
+    margin-right: 2rem;
+    margin-top: 1rem;
+  }
+
+  .Glocal-content {
+    margin-left: 2rem;
+  }
+}
+
+
+@media (min-width: 1100px) {
+  .Glocal-figure {
+    margin-right: 4.5rem;
+  }
+
+  .Glocal-content {
+    margin-left: 4.5rem;
+  }
 }
