--- a/components/hero/index.css
+++ b/components/hero/index.css
@@ -2,13 +2,12 @@
 
 /* @define Hero */
 :root {
-  --Hero-rotatingDelay: 500ms;
+  --Hero-rotatingDelay: 450ms;
 }
 
 .Hero {
-  --Hero-rotatingDelay: 500ms;
   --Hero-scroll: 0;
-
+  --Hero-rotatingDelay: 450ms;
   position: relative;
   width: 100%;
 }
@@ -22,8 +21,6 @@
   flex-direction: column;
   justify-content: center;
   margin: 5rem 0 4rem;
-  transition: transform 100ms ease;
-  transform: translate3d(0, var(--Hero-scroll), 0);
 }
 
 @media (min-width: 600px) and (min-height: 400px) {
@@ -35,11 +32,18 @@
 .Hero-title {
   font-size: 2.25rem;
   line-height: 1.1;
-  max-width: 50rem;
+  max-width: 35rem;
   font-weight: 600;
 }
 
 @media (min-width: 800px) and (min-height: 400px) {
+  .Hero-title {
+    font-size: 3.5rem;
+    max-width: 50rem;
+  }
+}
+
+@media (min-width: 950px) and (min-height: 400px) {
   .Hero-title {
     font-size: 4rem;
   }
@@ -94,7 +98,8 @@
   margin-bottom: 3.4rem;
 }
 
-.Hero-image {
+.Hero-wrap,
+.Hero-wrap::after {
   position: absolute;
   z-index: 0;
   top: 0;
@@ -103,9 +108,23 @@
   bottom: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden;
+}
+
+.Hero-wrap::after {
+  content: "";
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.Hero-image {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: 50% 50%;
   display: block;
+  transition: transform 50ms ease;
+  transform-origin: bottom;
+  transform: scale(1.02) translate3d(0, var(--Hero-scroll), 0);
 }
 
 .Hero--image .Hero-content {
@@ -131,7 +150,7 @@
   }
 
   .Hero--image .Hero-content {
-    min-height: 70vh;
+    min-height: 75vh;
   }
 }
 
@@ -164,17 +183,17 @@
 
 :root[scripting-enabled] .Hero-rotateText {
   display: inline-block;
-  transform: translateY(.75em);
-  transition: transform var(--Hero-rotatingDelay) ease, opacity var(--Hero-rotatingDelay) ease;
+  transform: translateX(.3em);
+  transition: transform 300ms ease, opacity 300ms ease;
   opacity: 0;
 }
 
 :root[scripting-enabled] .Hero-rotateText.out {
-  transform: translateY(-.75em);
+  transform: translateX(-.3em);
   opacity: 0;
 }
 
 :root[scripting-enabled] .Hero-rotateText.in {
-  transform: translateY(0px);
+  transform: translateX(0px);
   opacity: 1;
 }
